--- a/portfolio.css
+++ b/portfolio.css
@@ -9,7 +9,7 @@
     background-color: #05112c;
     color: white;
 }
-div.rc-overflow.st-emotion-cache-qreyob.en0apyo13 {
+div.rc-overflow.st-emotion-cache-qreyob.eof1nuh13 {
     padding-left: 240px;
 }
 [data-testid="stTopNavLinkContainer"]{
@@ -92,4 +92,5 @@ h1#line {
     font-size: 13px;
     font-weight: 600;
     padding: 0px;
+
 }
